bk_ida/gccida/c3/warning_with_file_and_line
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1722:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 s; // [rsp+D0h] [rbp-198h] BYREF 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1727:27: error: expected expression
s.args_ptr = ( va_list_0 *)va; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1727:16: error: use of undeclared identifier 'va_list_0'
s.args_ptr = ( va_list_0 *)va; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1731:12: error: expected expression
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1731:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1731:46: error: expected expression
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/diagnostic.c:1731:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_file_and_line/src/obj/diagnostic.o] Error 1
